--- a/indexStyle.css
+++ b/indexStyle.css
@@ -1,7 +1,21 @@
 html, body {
   margin: 0;
   height: 100%;
-  background-color: red;
+  background: linear-gradient(#B24592, #F15F79);
+}
+
+a { text-decoration: none; color: #403A3E; }
+a:hover { text-decoration: underline; }
+
+section {
+  min-height: 100%;
+}
+
+footer {
+  position: relative;
+  margin-top: -50px;
+  height: 50px;
+  clear: both;
 }
 
 #button {
